# picmi

./: .gitignore  AUTHORS  CMakeLists.txt  GNUmakefile  INSTALL  Makefile  Messages.sh  README  TODO  org.kde.picmi.appdata.xml  org.kde.picmi.desktop  picmi.appdata.xml  picmi.desktop  picmi.pro  picmiui.rc
doc/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt  hisc-apps-picmi.svgz
levels/: CMakeLists.txt  default.xml
levels/default/: antique_phone.xpm  baby_chick.xpm  baby_mario.xpm  baby_panda.xpm  basketball.xpm  bass_clef.xpm  bike.xpm  bird.xpm  calculator.xpm  camera.xpm  carlthecat.xpm  clarathecat.xpm  clausthecat.xpm  clef.xpm  clown.xpm  crocodile.xpm  donald.xpm  elephant.xpm  halloween.xpm  hourglass.xpm  jet.xpm  mickey.xpm  mobile_phone.xpm  panda.xpm  phone.xpm  picmi.xpm  pirate_dog.xpm  policeman.xpm  robot.xpm  santa_claus.xpm  shopping_cart.xpm  soccer.xpm  zebra.xpm
src/: CMakeLists.txt  config.h  config.h.in  constants.h  highscores.cpp  highscores.h  main.cpp  outofboundsexception.cpp  outofboundsexception.h  settings.cpp  settings.h  systemexception.cpp  systemexception.h
src/gui/: CMakeLists.txt  cellitem.cpp  cellitem.h  dragmanager.cpp  dragmanager.h  helpwindow.cpp  helpwindow.h  helpwindow.ui  highlightitem.cpp  highlightitem.h  highscorewindow.cpp  highscorewindow.h  highscorewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pausebanneritem.cpp  pausebanneritem.h  pixmapitem.cpp  pixmapitem.h  reloadableitem.cpp  reloadableitem.h  renderer.cpp  renderer.h  scene.cpp  scene.h  selectboardwindow.cpp  selectboardwindow.h  selectboardwindow.ui  settingswindow.cpp  settingswindow.h  settingswindow.ui  streakitem.cpp  streakitem.h  textbanneritem.cpp  textbanneritem.h  view.cpp  view.h
src/gui/graphicsitems/: cellitem.cpp  cellitem.h  graphicsitem.h  highlightitem.cpp  highlightitem.h  pixmapitem.cpp  pixmapitem.h  reloadableitem.cpp  reloadableitem.h  streakitem.cpp  streakitem.h  textbanneritem.cpp  textbanneritem.h
src/logic/: CMakeLists.txt  board.cpp  board.h  boardmap.cpp  boardmap.h  boardstate.cpp  boardstate.h  elapsedtime.cpp  elapsedtime.h  levelloader.cpp  levelloader.h  picmi.cpp  picmi.h  streaks.cpp  streaks.h
test/logic/: CMakeLists.txt  streaks_test.cpp  streaks_test.h
themes/: CMakeLists.txt  picmi.desktop
